# the-ai-promptly

./: .gitignore  .vercelignore  README.md  content_search_seeds.txt  preferred_domains.txt  pyproject.toml  vercel.json
launchd/: com.marcilio.daily-agentic.plist  com.marcilio.frontier-newsletter.plist
scripts/: build_dist.py  daily.sh
src/researcher_agent/: __init__.py  agent.py  article.py  cli.py  config.py  dashboard.py  email_delivery.py  fetcher.py  minhash.py  parser.py  ranker.py  search_engine.py  storage.py  utils.py
templates/: email.html  index.html  newsletter.html
